Playerfeedback now removes players from audience